# cosmos_on_dreamzero

./: .gitignore  .ruff.toml  ALOHA.md  ATTRIBUTIONS.md  LIBERO.md  README.md  ROBOCASA.md  SETUP.md  justfile  orders.md  pyproject.toml  pyproject.toml.backup  pyproject.toml.with_cosmos_deps  pyproject_simplified.toml  pyrefly.toml  train_vla_distill.py
cosmos_policy/: conditioner.py  constants.py  install.sh  pyproject.toml  requirements.txt  trainer.py  verify_installation.py
cosmos_policy/_src/imaginaire/: config.py  model.py  serialization.py  trainer.py
cosmos_policy/_src/imaginaire/attention/: README.md  __init__.py  backends.py  checks.py  frontend.py  varlen.py
cosmos_policy/_src/imaginaire/callbacks/: every_n.py  image_grad_clip.py  manual_gc.py
cosmos_policy/_src/imaginaire/checkpointer/: base.py  ddp.py  ddp_test.py  dummy.py  s3_filesystem.py  tp.py  tp_ema.py
cosmos_policy/_src/imaginaire/configs/: lr_scheduler.py
cosmos_policy/_src/imaginaire/datasets/: joint_training.py  mock_dataset_test.py
cosmos_policy/_src/imaginaire/functional/: lr_scheduler.py  multi_step.py  runge_kutta.py
cosmos_policy/_src/imaginaire/lazy_config/: __init__.py  instantiate.py  lazy.py
cosmos_policy/_src/imaginaire/models/: abstract_emb_model.py
cosmos_policy/_src/imaginaire/modules/: camera_test.py  res_sampler.py
cosmos_policy/_src/imaginaire/utils/: callback.py  checkpoint_db.py  checkpoint_db_test.py  checkpointer.py  config_helper.py  context_managers.py  context_parallel.py  distributed.py  ema.py  ema_test.py  fsdp_helper.py  fused_adam.py  graph.py  helper_test.py  launch.py  misc.py  misc_test.py  object_store.py  optim_instantiate.py  parallel_state_helper.py  profiling.py  s3_utils.py  timer.py  training.py  validator_params.py  validator_test.py  wandb_util.py
cosmos_policy/_src/imaginaire/visualize/: __init__.py  video.py
cosmos_policy/_src/predict2/: conditioner.py
cosmos_policy/_src/predict2/callbacks/: compile_tokenizer.py  dataloading_monitor.py  device_monitor.py  every_n_draw_sample.py  grad_clip.py  heart_beat.py  iter_speed.py  val_loss_computation.py  validation_draw_sample.py  wandb_log.py
cosmos_policy/_src/predict2/checkpointer/: dcp.py
cosmos_policy/_src/predict2/datasets/: augmentor_provider.py  cached_replay_dataloader.py  cached_replay_dataloader_test.py  dataset_provider.py  item_dataset.py  joint_dataloader.py  watchdog.py
cosmos_policy/_src/predict2/inference/: get_t5_emb_test.py  get_umt5_emb.py  get_umt5_emb_test.py  interpolator_cli.py  interpolator_lib.py  text2image.py  utils.py  video2world.py
cosmos_policy/_src/predict2/models/: interpolator_model.py  interpolator_model_rectified_flow.py  model_fsdp2_test.py  text2world_model.py  text2world_model_rectified_flow.py  text2world_wan2pt1_model.py  utils.py  video2world_model.py  video2world_model_rectified_flow.py  video2world_wan2pt1_model.py
cosmos_policy/_src/predict2/modules/: neighborhood_attn.py
cosmos_policy/_src/predict2/networks/: a2a_cp.py  clip.py  minimal_v1_lvg_dit.py  minimal_v4_dit.py  minimal_v4_dit_test_sparse_attn_e2e_speedup.py  wan2pt1.py
cosmos_policy/_src/predict2/tests/: training_loss_test.py
cosmos_policy/_src/predict2/text_encoders/: reason1.py  text_encoder.py  text_encoder_test.py
cosmos_policy/_src/predict2/tokenizers/: base_vae.py  cosmos.py  interface.py  wan2pt1.py  wan2pt1_2d_plugins.py  wan2pt2.py
cosmos_policy/_src/predict2/utils/: dtensor_helper.py  fused_adam_dtensor.py  model_loader.py  optim_instantiate.py
cosmos_policy/_src/reason1/models/: vlm_base.py  vlm_qwen.py  vlm_qwen_omni.py
cosmos_policy/_src/reason1/parallelisms/: dcp_checkpointer.py  dcp_checkpointer_test.py  metrics.py  optimizer.py  parallel_dims.py  parallelize_qwen.py  planner.py  torchtitan_utilts.py
cosmos_policy/_src/reason1/tokenizer/: processor.py
cosmos_policy/_src/reason1/utils/: checkpoint.py  dcp_checkpointer.py  fused_adam.py  load.py  testing_utils.py
cosmos_policy/config/: callbacks.py  config.py  config_v2.py
cosmos_policy/config/conditioner/: video2world_conditioner.py
cosmos_policy/config/defaults/: model.py  tokenizer.py
cosmos_policy/config/experiment/: cosmos_policy_experiment_configs.py
cosmos_policy/datasets/: aloha_dataset.py  dataset_common.py  dataset_utils.py  libero_dataset.py  robocasa_dataset.py  robocasa_distill_dataset.py  save_aloha_t5_text_embeddings.py  save_libero_t5_text_embeddings.py  save_robocasa_t5_text_embeddings.py  t5_embedding_utils.py
cosmos_policy/experiments/robot/: cosmos_utils.py  robot_utils.py
cosmos_policy/losses/: distillation_losses.py
cosmos_policy/models/: policy_text2world_model.py  policy_video2world_model.py  vla_augmented_distillation.py
cosmos_policy/modules/: cosmos_sampler.py  hybrid_edm_sde.py
cosmos_policy/pipeline/: moe_vla_pipeline.py
cosmos_policy/scripts/: train.py
cosmos_policy/tokenizers/: wan2pt1.py
cosmos_policy/utils/: __init__.py  checkpoint_utils.py  utils.py
(+252 files in other folders)
